feat: poc csv export
