# catalog/pkg/openapi/model_export_dry_run_response.go
@@ -1,0 +1,258 @@
+/*
+Catalog REST API
+
+REST API for Kubeflow Hub Catalog
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the ExportDryRunResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ExportDryRunResponse{}
+
+// ExportDryRunResponse Preview of a CSV export operation. Contains the total count of models that would be exported, the column headers, and a paginated list of the models.
+type ExportDryRunResponse struct {
+	// Total number of models that would be exported.
+	TotalCount int32 `json:"totalCount"`
+	// Column headers that will appear in the CSV file.
+	Columns []string `json:"columns"`
+	// Paginated list of models that would be exported.
+	Items []CatalogModel `json:"items"`
+	// Requested page size for the preview list.
+	PageSize int32 `json:"pageSize"`
+	// Token to retrieve the next page of the preview list.
+	NextPageToken string `json:"nextPageToken"`
+	// Number of items in the current page.
+	Size int32 `json:"size"`
+}
+
+type _ExportDryRunResponse ExportDryRunResponse
+
+// NewExportDryRunResponse instantiates a new ExportDryRunResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewExportDryRunResponse(totalCount int32, columns []string, items []CatalogModel, pageSize int32, nextPageToken string, size int32) *ExportDryRunResponse {
+	this := ExportDryRunResponse{}
+	this.TotalCount = totalCount
+	this.Columns = columns
+	this.Items = items
+	this.PageSize = pageSize
+	this.NextPageToken = nextPageToken
+	this.Size = size
+	return &this
+}
+
+// NewExportDryRunResponseWithDefaults instantiates a new ExportDryRunResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewExportDryRunResponseWithDefaults() *ExportDryRunResponse {
+	this := ExportDryRunResponse{}
+	return &this
+}
+
+// GetTotalCount returns the TotalCount field value
+func (o *ExportDryRunResponse) GetTotalCount() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.TotalCount
+}
+
+// GetTotalCountOk returns a tuple with the TotalCount field value
+// and a boolean to check if the value has been set.
+func (o *ExportDryRunResponse) GetTotalCountOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.TotalCount, true
+}
+
+// SetTotalCount sets field value
+func (o *ExportDryRunResponse) SetTotalCount(v int32) {
+	o.TotalCount = v
+}
+
+// GetColumns returns the Columns field value
+func (o *ExportDryRunResponse) GetColumns() []string {
+	if o == nil {
+		var ret []string
+		return ret
+	}
+
+	return o.Columns
+}
+
+// GetColumnsOk returns a tuple with the Columns field value
+// and a boolean to check if the value has been set.
+func (o *ExportDryRunResponse) GetColumnsOk() ([]string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Columns, true
+}
+
+// SetColumns sets field value
+func (o *ExportDryRunResponse) SetColumns(v []string) {
+	o.Columns = v
+}
+
+// GetItems returns the Items field value
+func (o *ExportDryRunResponse) GetItems() []CatalogModel {
+	if o == nil {
+		var ret []CatalogModel
+		return ret
+	}
+
+	return o.Items
+}
+
+// GetItemsOk returns a tuple with the Items field value
+// and a boolean to check if the value has been set.
+func (o *ExportDryRunResponse) GetItemsOk() ([]CatalogModel, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Items, true
+}
+
+// SetItems sets field value
+func (o *ExportDryRunResponse) SetItems(v []CatalogModel) {
+	o.Items = v
+}
+
+// GetPageSize returns the PageSize field value
+func (o *ExportDryRunResponse) GetPageSize() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.PageSize
+}
+
+// GetPageSizeOk returns a tuple with the PageSize field value
+// and a boolean to check if the value has been set.
+func (o *ExportDryRunResponse) GetPageSizeOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.PageSize, true
+}
+
+// SetPageSize sets field value
+func (o *ExportDryRunResponse) SetPageSize(v int32) {
+	o.PageSize = v
+}
+
+// GetNextPageToken returns the NextPageToken field value
+func (o *ExportDryRunResponse) GetNextPageToken() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.NextPageToken
+}
+
+// GetNextPageTokenOk returns a tuple with the NextPageToken field value
+// and a boolean to check if the value has been set.
+func (o *ExportDryRunResponse) GetNextPageTokenOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.NextPageToken, true
+}
+
+// SetNextPageToken sets field value
+func (o *ExportDryRunResponse) SetNextPageToken(v string) {
+	o.NextPageToken = v
+}
+
+// GetSize returns the Size field value
+func (o *ExportDryRunResponse) GetSize() int32 {
+	if o == nil {
+		var ret int32
+		return ret
+	}
+
+	return o.Size
+}
+
+// GetSizeOk returns a tuple with the Size field value
+// and a boolean to check if the value has been set.
+func (o *ExportDryRunResponse) GetSizeOk() (*int32, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Size, true
+}
+
+// SetSize sets field value
+func (o *ExportDryRunResponse) SetSize(v int32) {
+	o.Size = v
+}
+
+func (o ExportDryRunResponse) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ExportDryRunResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["totalCount"] = o.TotalCount
+	toSerialize["columns"] = o.Columns
+	toSerialize["items"] = o.Items
+	toSerialize["pageSize"] = o.PageSize
+	toSerialize["nextPageToken"] = o.NextPageToken
+	toSerialize["size"] = o.Size
+	return toSerialize, nil
+}
+
+type NullableExportDryRunResponse struct {
+	value *ExportDryRunResponse
+	isSet bool
+}
+
+func (v NullableExportDryRunResponse) Get() *ExportDryRunResponse {
+	return v.value
+}
+
+func (v *NullableExportDryRunResponse) Set(val *ExportDryRunResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableExportDryRunResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableExportDryRunResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableExportDryRunResponse(val *ExportDryRunResponse) *NullableExportDryRunResponse {
+	return &NullableExportDryRunResponse{value: val, isSet: true}
+}
+
+func (v NullableExportDryRunResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableExportDryRunResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
